Fix a problem with duplicate calls to FrameFetchContext::dispatchDidFail

In some circumstances FrameFetchContext::dispatchDidFail can get called
twice for the same resource.  This patch fixes an assumption by the
blink scheduler that this scenario didn't happen.

BUG=626218

Review-Url: https://codereview.chromium.org/2125273002
Cr-Commit-Position: refs/heads/master@{#404191}

Former-commit-id: 4c316c6a98fd2e49bd92c3d90855cffc57df3608