components/scheduler/renderer/web_frame_scheduler_impl.cc
@@ -108,14 +108,14 @@ blink::WebViewScheduler* WebFrameSchedulerImpl::webViewScheduler() {
   return parent_web_view_scheduler_;
 }
 
-void WebFrameSchedulerImpl::incrementPendingResourceLoadCount() {
+void WebFrameSchedulerImpl::didStartLoading(unsigned long identifier) {
   if (parent_web_view_scheduler_)
-    parent_web_view_scheduler_->incrementPendingResourceLoadCount();
+    parent_web_view_scheduler_->DidStartLoading(identifier);
 }
 
-void WebFrameSchedulerImpl::decrementPendingResourceLoadCount() {
+void WebFrameSchedulerImpl::didStopLoading(unsigned long identifier) {
   if (parent_web_view_scheduler_)
-    parent_web_view_scheduler_->decrementPendingResourceLoadCount();
+    parent_web_view_scheduler_->DidStopLoading(identifier);
 }
 
 void WebFrameSchedulerImpl::setPageVisible(bool page_visible) {
