components/scheduler/renderer/web_frame_scheduler_impl.h
@@ -44,8 +44,8 @@ class SCHEDULER_EXPORT WebFrameSchedulerImpl : public blink::WebFrameScheduler {
   blink::WebTaskRunner* timerTaskRunner() override;
   blink::WebTaskRunner* unthrottledTaskRunner() override;
   blink::WebViewScheduler* webViewScheduler() override;
-  void incrementPendingResourceLoadCount() override;
-  void decrementPendingResourceLoadCount() override;
+  void didStartLoading(unsigned long identifier) override;
+  void didStopLoading(unsigned long identifier) override;
 
   void OnVirtualTimeDomainChanged();
 
